--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+
+
 body {
     padding: 0;
     margin: 0;
@@ -11,7 +13,7 @@ body {
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: aqua;
+    background-color: white;
 }
 
 .title {
@@ -31,6 +33,8 @@ body {
     box-shadow: 0 0 10px 2px;
 }
 
+
+
 /* button styling start */
 .btn-grid {
     display: grid;
@@ -41,13 +45,18 @@ body {
 .btn {
     border: 1px solid purple;
     padding: 10px 15px;
-    background: #0097e6;
+    background-color: #0097e6;
     border-radius: 5px;
+    outline: none;
 }
 
 .btn:hover {
     background-color: #7f8fa6;
 }
+
+
+
+
 
 .start-btn, .submit-btn, .next-btn {
     font-weight: bold;
@@ -60,8 +69,22 @@ body {
     align-items: center;
 }
 
+.code  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .hide {
     display: none;
 } 
+
+.countdown {
+    display: flex;
+    font-size: 30px;
+    margin: 200px 20px auto 40px;
+    padding: 20px;
+    
+}
 
 /* button styling end */
