--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,12 +79,14 @@ body {
     display: none;
 } 
 
-.countdown {
+.timer {
     display: flex;
     font-size: 30px;
-    margin: 200px 20px auto 40px;
+    margin: -430px -70px 200px 40px;
     padding: 20px;
     
 }
+
+
 
 /* button styling end */
